--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    template working
+    <h1>{{title}} working!</h1>
+
+    {% for obj in object_list %}
+    
+        {{ obj.title}}<br/>
+        {{ obj.content}}<br/>
+        {{ obj.timestamp}}<br/>
+        {{ obj.updated}}<br/>
+        {{ obj.id}}<br/>
+
+    {% endfor %}
+    
 </body>
 </html>
