post_create view url

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,16 @@
     <h1>{{title}} working!</h1>
 
     {% for obj in object_list %}
-    
-        {{ obj.title}}<br/>
+
+        <a href='{% url "detail" id=obj.id %}'>{{ obj.title}}</a><br/>
         {{ obj.content}}<br/>
         {{ obj.timestamp}}<br/>
         {{ obj.updated}}<br/>
         {{ obj.id}}<br/>
 
     {% endfor %}
+    <br/>
+    <br/>
     
 </body>
 </html>
