Django Messages Framework

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -7,6 +7,15 @@
 </head>
 <body>
 
+{% comment %} context messages {% endcomment %}
+    {% if messages %}
+    <ul class='messages'>
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags}}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
     <button href='{% url "update" id=instance.id %}'>Edit</button><br/>
     <h1>{{instance.title}}</h1>
 
