base html in templates extends base, incluide messages in base

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post Detail</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-{% comment %} context messages {% endcomment %}
-    {% if messages %}
-    <ul class='messages'>
-        {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags}}"{% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
+
+{% block head_title %}{{ instance.title }} | {{ block.super }}{% endblock head_title %}
+
+{% block content %}
 
     <button href='{% url "update" id=instance.id %}'>Edit</button><br/>
     <h1>{{instance.title}}</h1>
@@ -25,6 +14,4 @@
         {{ instance.updated}}<br/>
         {{ instance.id}}<br/>
 
-    
-</body>
-</html>
+{% endblock content %}
