--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Post</title>
-</head>
-<body>
-    <h1>Form</h1>
+{% extends "base.html" %}
 
-    <form method='POST' action=''>{% csrf_token %}
-        {{ form.as_p }}
-        <input type='submit' value='Create Post'/>
-    </form>
-</body>
-</html>
+
+{% block content %}
+
+<h1>Form</h1>
+
+<form method='POST' action=''>{% csrf_token %}
+    {{ form.as_p }}
+    <input type='submit' value='Create Post'/>
+</form>
+
+{% endblock content %}
