--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -4,14 +4,13 @@
 {% block head_title %}{{ instance.title }} | {{ block.super }}{% endblock head_title %}
 
 {% block content %}
+    <div class="col-sm-6 col-sm-offset-3">
 
-    <button href='{% url "update" id=instance.id %}'>Edit</button><br/>
-    <h1>{{instance.title}}</h1>
-
-    
-        {{ instance.content}}<br/>
-        {{ instance.timestamp}}<br/>
-        {{ instance.updated}}<br/>
-        {{ instance.id}}<br/>
+        <button href='{% url "update" id=instance.id %}'>Edit</button><br/>
+        <h1>{{instance.title}}</h1><small>{{ instance.timestamp}}</small><br/>
+        {{ instance.content|linebreaks}}<br/>
+  
+        
+    </div>
 
 {% endblock content %}
