display mb posts col md sm lg

--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -1,26 +1,22 @@
 {% extends "base.html" %}
 
-
 {% block content %}
 
-        <h1>{{title}}</h1>
+    <h1>{{ title }}</h1>
 
-        <div class="row">
+    <div class="row">
         {% for obj in object_list %}
-
-            <div class="col-sm-6 col-md-4">
-                <div class="card" style="width: 18rem;">
+            <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
+                <div class="card">
                     <img src="#" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h3 class="card-title"><a href='{{ obj.get_absolute_url }}'>{{ obj.title}}</a><small>{{ obj.timestamp|timesince}}</small></h3>
-                        <p class="card-text">{{ obj.content|linebreaks|truncatechars:120}}</p>
+                        <h3 class="card-title"><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><small>{{ obj.timestamp|timesince }}</small></h3>
+                        <p class="card-text">{{ obj.content|linebreaks|truncatechars:120 }}</p>
                         <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
                     </div>
                 </div>
             </div>
+        {% endfor %}
+    </div>
 
-            {% endfor %}
-        </div>
-
-            
 {% endblock content %}
