--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -4,7 +4,7 @@
 {% block head_title %}{{ instance.title }} | {{ block.super }}{% endblock head_title %}
 
 {% block content %}
-    <div class="col-sm-6 col-sm-offset-3">
+    <div class="col-sm-6 col-sm-offset-3 p-5">
 
         <button href='{% url "update" id=instance.id %}'>Edit</button><br/>
         <h1>{{instance.title}}</h1><small>{{ instance.timestamp}}</small><br/>
