--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -3,11 +3,13 @@
 
 {% block content %}
 
-<h1>Form</h1>
+    <div class='p-5'>
+        <h1>Form</h1>
 
-<form method='POST' action=''>{% csrf_token %}
-    {{ form.as_p }}
-    <input type='submit' value='Create Post'/>
-</form>
+        <form method='POST' action=''>{% csrf_token %}
+            {{ form.as_p }}
+            <input type='submit' value='Create Post'/>
+        </form>
+    </div>
 
 {% endblock content %}
