--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -2,21 +2,31 @@
 
 {% block content %}
 
-    <h1>{{ title }}</h1>
+<div class='p-5'>
+        <h1>{{ title }}</h1>
 
-    <div class="row">
-        {% for obj in object_list %}
-            <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
-                <div class="card">
-                    <img src="#" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h3 class="card-title"><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><small>{{ obj.timestamp|timesince }}</small></h3>
-                        <p class="card-text">{{ obj.content|linebreaks|truncatechars:120 }}</p>
-                        <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
+        <div class="row">
+            {% for obj in object_list %}
+                <div class="col-sm-6  col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="#" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <div class='row'>
+                                <div class="col-md-8">
+                                    <h3 class="card-title"><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a></h3>
+                                </div>
+                                <div class="col-md-4">
+                                    <p class='font-size-sm'>{{ obj.timestamp|timesince }} ago</p>
+                                </div>
+                                <p class="card-text">{{ obj.content|linebreaks|truncatechars:120 }}</p>
+                            </div>
+                            <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
+
     </div>
 
 {% endblock content %}
