--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -3,30 +3,53 @@
 {% block content %}
 
 <div class='p-5'>
-        <h1>{{ title }}</h1>
+    <h1>{{ title }}</h1>
 
-        <div class="row">
-            {% for obj in object_list %}
-                <div class="col-sm-6  col-lg-4 mb-4">
-                    <div class="card">
-                        <img src="#" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <div class='row'>
-                                <div class="col-md-8">
-                                    <h3 class="card-title"><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a></h3>
-                                </div>
-                                <div class="col-md-4">
-                                    <p class='font-size-sm'>{{ obj.timestamp|timesince }} ago</p>
-                                </div>
-                                <p class="card-text">{{ obj.content|linebreaks|truncatechars:120 }}</p>
+    <!-- /// POSTS -->
+    <div class="row">
+        {% for obj in object_list %}
+            <div class="col-sm-6 col-lg-4 mb-4">
+                <div class="card">
+                    <img src="#" class="card-img-top" alt="Post Image">
+                    <div class="card-body">
+                        <div class='row'>
+                            <div class="col-md-8">
+                                <h3 class="card-title"><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a></h3>
                             </div>
-                            <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
+                            <div class="col-md-4">
+                                <p class='font-size-sm'>{{ obj.timestamp|timesince }} ago</p>
+                            </div>
                         </div>
+                        <p class="card-text">{{ obj.content|linebreaks|truncatechars:120 }}</p>
+                        <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
                     </div>
                 </div>
-            {% endfor %}
-        </div>
-
+            </div>
+        {% endfor %}
     </div>
+
+    <!-- /// PAGINATION -->
+    <div class="pagination">
+        <span class="step-links">
+            <!-- 1st & previous -->
+            {% if object_list.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ object_list.previous_page_number }}">previous</a>
+            {% endif %}
+
+            <!-- current -->
+            <span class="current">
+                Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.
+            </span>
+
+            <!-- next & last -->
+            {% if object_list.has_next %}
+                <a href="?page={{ object_list.next_page_number }}">next</a>
+                <a href="?page={{ object_list.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
+    </div>
+
+</div>
 
 {% endblock content %}
