--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -39,7 +39,7 @@
 
             <!-- current -->
             <span class="current">
-                Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.
+               <strong> Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.</strong>
             </span>
 
             <!-- next & last -->
