--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -6,7 +6,7 @@
     <div class='p-5'>
         <h1>Form</h1>
 
-        <form method='POST' action=''>{% csrf_token %}
+        <form method='POST' action='' enctype='multipart/form-data'>{% csrf_token %}
             {{ form.as_p }}
             <input type='submit' value='Create Post'/>
         </form>
