--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="col-sm-6 col-sm-offset-3 p-5">
 
-        <button href='{% url "update" id=instance.id %}'>Edit</button><br/>
+        <button href='{% url "update" slug=instance.slug %}'>Edit</button><br/>
         {% if obj.image %}
             <img src='{{ instance.image.url }}' class='img-fluid'/>
         {% endif %}
