--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load urlify %}
 
 
 {% block head_title %}{{ instance.title }} | {{ block.super }}{% endblock head_title %}
@@ -12,13 +13,14 @@
         {% endif %}
         <h1>{{instance.title}}</h1><small>{{ instance.timestamp}}</small><br/>
 
+
         <div class='anchortags'>
             <!-- {{ request.build_absolute_uri }} -->
             <!-- Share on Facebook anchortag-->
             <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">
                 Facebook</a>
             <!-- Share on X anchortag-->
-            <a href="https://x.com/home?status={{ share_string }}%20{{ request.build_absolute_uri }}">
+            <a href="https://x.com/home?status={{ instance.content|urlify }}%20{{ request.build_absolute_uri }}">
                 X</a>
             <!-- Share on GooglePlus anchortag-->
             <a href='https://plus.google.com/share?url={{ request.build_absolute_uri }}'>
@@ -30,8 +32,6 @@
             <a href="http://www.reddit.com/submit?url={{ request.build_absolute_uri }}&title={{ share_string }}.">
                 Reddit</a>
         </div>
-        {{ instance.content|linebreaks}}<br/>
-  
         
         
     </div>
