--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -6,7 +6,7 @@
     <h1>{{ title }}</h1>
 
     <!-- /// POSTS -->
-    <div class="row">
+    <div class="posts-list row">
         {% for obj in object_list %}
             <div class="col-sm-6 col-lg-4 mb-4">
                 <div class="card">
@@ -22,6 +22,9 @@
                                 <p class='font-size-sm'>{{ obj.timestamp|timesince }} ago</p>
                             </div>
                         </div>
+                        {% if obj.user.get_full_name  %}
+                        <p class='text-muted'>Author: {{ obj.user.get_full_name }}</p><!-- {{ obj.user }} is the same-->
+                        {% endif %}
                         <p class="card-text">{{ obj.content|linebreaks|truncatechars:120 }}</p>
                         <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
                     </div>
