--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,14 +5,9 @@
 {% block head_title %}{{ instance.title }} | {{ block.super }}{% endblock head_title %}
 
 {% block content %}
-    <div class="col-sm-6 col-sm-offset-3 p-5">
-
-        <button href='{% url "update" slug=instance.slug %}'>Edit</button><br/>
-        {% if obj.image %}
-            <img src='{{ instance.image.url }}' class='img-fluid'/>
-        {% endif %}
-        <h1>{{instance.title}}</h1><small>{{ instance.timestamp}}</small><br/>
-
+<div class="col-sm-6 col-sm-offset-3 p-5">
+    
+    {% comment %} <button href='{% url "update" slug=instance.slug %}'>Edit</button><br/> {% endcomment %}
 
         <div class='anchortags'>
             <!-- {{ request.build_absolute_uri }} -->
@@ -32,8 +27,21 @@
             <a href="http://www.reddit.com/submit?url={{ request.build_absolute_uri }}&title={{ share_string }}.">
                 Reddit</a>
         </div>
+
+        <div class='post-body'>
+            {% if instance.image %}
+            <img src={{ instance.image.url }} class='img-fluid align-items-center'/>
+            {% endif %}
+            <h1>{{instance.title}}</h1><small>{{ instance.timestamp}}</small><br/>
+            {% if instance.user.get_full_name  %}
+            <p>Author: {{ instance.user.get_full_name }}</p><br/><!-- {{ instance.user }} is the same-->
+            {% endif %}
+            <h5 class='pt-3'>{{instance.content}}</h5>
+        </div>
+
+</div>
+
         
         
-    </div>
 
 {% endblock content %}
