--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,11 @@
 
     <!-- css -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="{% static 'fontawesome-free/css/all.min.css' %}">
+    <script src="https://kit.fontawesome.com/98d1538458.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
 
