--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -2,9 +2,7 @@
 
 {% block content %}
 
-<div class='p-5'>
-    <h1>{{ title }}</h1>
-
+<div class='posts-list-and-pagination py-3'>
     <!-- /// POSTS -->
     <div class="posts-list row">
         {% for obj in object_list %}
