--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,40 +5,54 @@
 {% block head_title %}{{ instance.title }} | {{ block.super }}{% endblock head_title %}
 
 {% block content %}
-<div class="col-sm-6 col-sm-offset-3 p-5">
-    
-    {% comment %} <button href='{% url "update" slug=instance.slug %}'>Edit</button><br/> {% endcomment %}
 
-        <div class='anchortags'>
-            <!-- {{ request.build_absolute_uri }} -->
-            <!-- Share on Facebook anchortag-->
-            <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">
-                Facebook</a>
-            <!-- Share on X anchortag-->
-            <a href="https://x.com/home?status={{ instance.content|urlify }}%20{{ request.build_absolute_uri }}">
-                X</a>
-            <!-- Share on GooglePlus anchortag-->
-            <a href='https://plus.google.com/share?url={{ request.build_absolute_uri }}'>
-                Google+</a>
-            <!-- Share on Linkedin anchortag-->
-            <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ request.build_absolute_uri }}&title={{ intance.title }}&summary={{ share_string }}&source={{ request.build_absolute_uri }}">
-                Linkedin</a>
-            <!-- Share on Reddit anchortag-->
-            <a href="http://www.reddit.com/submit?url={{ request.build_absolute_uri }}&title={{ share_string }}.">
-                Reddit</a>
+<div class='anchortags-and-post-body'>
+    <div class="col-md-8 mx-auto py-5">
+        
+        {% comment %} <button href='{% url "update" slug=instance.slug %}'>Edit</button><br/> {% endcomment %}
+
+        <div class='anchortags pb-3'>
+            <!-- Share on Facebook anchor tag -->
+            <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}"  target="_blank">
+                <i class="fab fa-facebook-square fa-fw"></i>
+            </a>
+        
+            <!-- Share on X anchor tag -->
+            <a href="https://x.com/home?status={{ instance.content|urlify }}%20{{ request.build_absolute_uri }}"  target="_blank">
+                <svg viewBox="0 0 24 24" aria-hidden="true" class="r-1nao33i r-4qtqp9 r-yyyyoo r-16y2uox r-8kz0gk r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-lrsllp fa-fw">
+                    <g><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path></g>
+                </svg>
+            </a>
+        
+            <!-- Share on GooglePlus anchor tag -->
+            <a href='https://plus.google.com/share?url={{ request.build_absolute_uri }}'  target="_blank">
+                <i class="fab fa-google-plus-square fa-fw"></i>
+            </a>
+        
+            <!-- Share on Linkedin anchor tag -->
+            <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ request.build_absolute_uri }}&title={{ instance.title }}&summary={{ share_string }}&source={{ request.build_absolute_uri }}"  target="_blank">
+                <i class="fab fa-linkedin fa-fw"></i>
+            </a>
+        
+            <!-- Share on Reddit anchor tag -->
+            <a href="http://www.reddit.com/submit?url={{ request.build_absolute_uri }}&title={{ share_string }}." target="_blank">
+                <i class="fab fa-reddit-square fa-fw"></i>
+            </a>
         </div>
+        
+        
 
-        <div class='post-body'>
-            {% if instance.image %}
-            <img src={{ instance.image.url }} class='img-fluid align-items-center'/>
-            {% endif %}
-            <h1>{{instance.title}}</h1><small>{{ instance.timestamp}}</small><br/>
-            {% if instance.user.get_full_name  %}
-            <p>Author: {{ instance.user.get_full_name }}</p><br/><!-- {{ instance.user }} is the same-->
-            {% endif %}
-            <h5 class='pt-3'>{{instance.content}}</h5>
-        </div>
-
+            <div class='post-body'>
+                {% if instance.image %}
+                <img src={{ instance.image.url }} class='img-fluid align-items-center'/>
+                {% endif %}
+                <h1>{{instance.title}}</h1><small>{{ instance.timestamp}}</small><br/>
+                {% if instance.user.get_full_name  %}
+                <p>Author: {{ instance.user.get_full_name }}</p><br/><!-- {{ instance.user }} is the same-->
+                {% endif %}
+                <h5 class='pt-3'>{{instance.content}}</h5>
+            </div>
+    </div>
 </div>
 
         
