--- a/templates/base.html
+++ b/templates/base.html
@@ -19,15 +19,13 @@
 
 </head>
 <body>
+    <!-- Facebook Comments -->
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v17.0" nonce="BQCouzfC"></script>
 
     {% include "messages_display.html" %}
-
     <div class="container">
-        {% block content %}
-
-        
-
-        {% endblock content %}
+        {% block content %} {% endblock content %}
     </div>
     
 </body>
