--- a/templates/base.html
+++ b/templates/base.html
@@ -21,9 +21,13 @@
 <body>
     <!-- Facebook Comments -->
     <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v17.0" nonce="BQCouzfC"></script>
-
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v17.0&appId=934289161245127&autoLogAppEvents=1" nonce="bJGwAcpK"></script>
     {% include "messages_display.html" %}
+    
+    <!-- Facebook Like button -->
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v17.0" nonce="wHToydUZ"></script>
+
     <div class="container">
         {% block content %} {% endblock content %}
     </div>
