--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -52,9 +52,9 @@
                 <h5 class='pt-3'>{{instance.content}}</h5>
                 <hr/>
                 <!--Like-->
-                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="" data-layout="" data-action="" data-size="" data-share="true"></div>
+                <div class="fb-like" data-href="{{ request.build_absolute_uri }}" data-width="200" data-layout="" data-action="" data-size="" data-share="true"></div>
                 <!--Comments-->
-                <div class="fb-comments" data-href="{{ request.build_absolute_uri }}" data-width="" data-numposts="5"></div>
+                <div class="fb-comments" data-href="{{ request.build_absolute_uri }}" data-width="600" data-numposts="5"></div>
             </div>
 
     </div>
