draft post in model and tempalte

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,12 +19,9 @@
 </head>
 
 <body>
-    {% comment %} <!-- Facebook Comments --> {% endcomment %}
+    <!-- Facebook Comments --> 
     <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v17.0" nonce="IBUd0LEy"></script>
-    {% comment %} <!-- Facebook Like button --> {% endcomment %}
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v17.0" nonce="wHToydUZ"></script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v17.0" nonce="V5HI9YZM"></script>
 
     <div class="container">
         {% block content %} {% endblock content %}
