--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -45,17 +45,26 @@
                 {% if instance.image %}
                 <img src={{ instance.image.url }} class='img-fluid align-items-center'/>
                 {% endif %}
-                <h1>{{instance.title}}</h1><small>{{ instance.timestamp}}</small><br/>
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-between">
+                        <h1>{{ instance.title }}</h1>
+                        <h4>
+                            {% if instance.draft %}
+                                <span style='color:red;'>Draft</span>
+                            {% endif %}
+                            {{ instance.publish }}
+                        </h4>
+                    </div>
+                </div>
+                
                 {% if instance.user.get_full_name  %}
                 <p>Author: {{ instance.user.get_full_name }}</p><br/><!-- {{ instance.user }} is the same-->
                 {% endif %}
                 <h5 class='pt-3'>{{instance.content}}</h5>
                 <hr/>
-                <!--Like-->
-                <div class="fb-like" data-href="{{ request.build_absolute_uri }}" data-width="200" data-layout="" data-action="" data-size="" data-share="true"></div>
-                <!--Comments-->
-                <div class="fb-comments" data-href="{{ request.build_absolute_uri }}" data-width="600" data-numposts="5"></div>
             </div>
+            <!--Comments-->
+            <div class="fb-comments" data-href="{{ request.build_absolute_uri }}" data-width="600" data-numposts="5"></div>
 
     </div>
 </div>
