--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -14,6 +14,12 @@
                     <div class="card-body">
                         <div class='row'>
                             <div class="col-md-8">
+                                <div class='row'>
+                                    <div class="d-flex">
+                                        {% if obj.draft %}<h6 class='text-muted'>Staff Only: </h6><h6 class='text-danger ml-2'> Draft</h6>{%  endif %}
+                                        {% if obj.publish > today %}<h6 class='text-muted'>Staff Only: </h6><h6 class='text-danger ml-2'> Future Post</h6>{% endif %}
+                                    </div>
+                                </div>
                                 <h3 class="card-title"><a class='text-decoration-none fw-bold' href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a></h3>
                             </div>
                             <div class="col-md-4 text-muted">
