--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -3,6 +3,13 @@
 {% block content %}
 
 <div class='posts-list-and-pagination py-3'>
+   <!-- Search Form -->
+<form method="GET" class="pb-3">
+    <input type="text" name="q" placeholder="Search posts" value="{{ request.GET.q }}">
+    <input type="submit" value="Search">
+</form>
+
+
     <!-- /// POSTS -->
     <div class="posts-list row">
         {% for obj in object_list %}
@@ -42,22 +49,23 @@
         <span class="step-links">
             <!-- 1st & previous -->
             {% if object_list.has_previous %}
-                <a href="?page=1">&laquo; first</a>
-                <a href="?page={{ object_list.previous_page_number }}">previous</a>
+                <a href="?page=1{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">&laquo; first</a>
+                <a href="?page={{ object_list.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">previous</a>
             {% endif %}
 
             <!-- current -->
             <span class="current">
-               <strong> Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.</strong>
+                <strong> Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.</strong>
             </span>
 
             <!-- next & last -->
             {% if object_list.has_next %}
-                <a href="?page={{ object_list.next_page_number }}">next</a>
-                <a href="?page={{ object_list.paginator.num_pages }}">last &raquo;</a>
+                <a href="?page={{ object_list.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">next</a>
+                <a href="?page={{ object_list.paginator.num_pages }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">last &raquo;</a>
             {% endif %}
         </span>
     </div>
+
 
 </div>
 
